Keep 'davon' in sub-ingredient names; handle »> OCR prefix; gen.png integration test
- cleanSubIngredientName(): stop stripping 'davon' prefix — kept for UI display.
  OCR-merge 'davonPiperin' → 'davon Piperin' (insert space instead of stripping).
- OcrTextParser: add U+00BB (») to LEADING_SPECIAL and cleanSubIngredientName
  char class so '»> davon Glucomannan' from gen.png is correctly recognised as
  sub-ingredient and stripped to 'davon Glucomannan'.
- DailyIntakeSnapshotService.sumIngredients(): strip '(?i)^davon\s+' from
  sub-ingredient name before using as totals map key (calc unaffected).
- Tests: update all ~30 assertions that expected 'davon' stripped; add
  parse_genPngRealOcr_subIngredientsWithGuillemetPrefix integration test
  and two »> unit tests. (373 tests green)